--- a/Project.toml
+++ b/Project.toml
@@ -14,9 +14,8 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 julia = "1"
 
 [extras]
-HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Random", "Test", "HCubature"]
+test = ["Random", "Test"]
