--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ SparsityDetection = "684fba80-ace3-11e9-3d08-3bc7ed6f96df"
 SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 
 [compat]
+Optim = "1"
 julia = "1"
 
 [extras]
