--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ Distributions = "0.25"
 ForwardDiff = "0.10"
 HCubature = "1"
 Optim = "1"
+Optimization = "3"
 SparseDiffTools = "2"
 julia = "1.6"
 
