--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+BenchmarkTools = "1"
 Distributions = "0.25"
 ForwardDiff = "0.10"
 HCubature = "1"
