CompatHelper: bump compat for OptimizationOptimJL to 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ ForwardDiff = "0.10"
 HCubature = "1"
 Optim = "1"
 Optimization = "3"
-OptimizationOptimJL = "0.1"
+OptimizationOptimJL = "0.1, 0.2"
 ReverseDiff = "1"
 SparseDiffTools = "2"
 Zygote = "0.6"
