Compat for SparseArrays

--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ Optimization = "3.25"
 OptimizationOptimJL = "0.3"
 Reexport = "1"
 ReverseDiff = "1"
+SparseArrays = "1"
 SparseConnectivityTracer = "0.5"
 Zygote = "0.6"
 julia = "1.9"
