Compat for LinearAlgebra

--- a/Project.toml
+++ b/Project.toml
@@ -25,11 +25,12 @@ Distributions = "0.25"
 FiniteDiff = "2"
 ForwardDiff = "0.10"
 HCubature = "1"
+LinearAlgebra = "1"
 Optimization = "3.25"
 OptimizationOptimJL = "0.3"
 Reexport = "1"
 ReverseDiff = "1"
-SparseArrays = "1.10"
+SparseArrays = "1"
 SparseConnectivityTracer = "0.5"
 Zygote = "0.6"
 julia = "1.9"
