--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ OptimizationOptimJL = "0.3"
 Reexport = "1"
 ReverseDiff = "1"
 SparseArrays = "1"
-SparseConnectivityTracer = "0.5"
+SparseConnectivityTracer = "0.5, 0.6"
 Zygote = "0.6"
 julia = "1.9"
 
