CompatHelper: bump compat for Optimization to 4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ FiniteDiff = "2"
 ForwardDiff = "0.10"
 HCubature = "1"
 LinearAlgebra = "1"
-Optimization = "3.25"
+Optimization = "3.25, 4"
 OptimizationOptimJL = "0.3"
 Reexport = "1"
 ReverseDiff = "1"
