CompatHelper: bump compat for OptimizationOptimJL to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ ForwardDiff = "0.10"
 HCubature = "1"
 LinearAlgebra = "1"
 Optimization = "3.25"
-OptimizationOptimJL = "0.3"
+OptimizationOptimJL = "0.3, 0.4"
 Reexport = "1"
 ReverseDiff = "1"
 SparseArrays = "1"
