--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
 [compat]
 ADTypes = "1"
 ChainRulesCore = "1"
-DifferentiationInterface = "0.5.3"
+DifferentiationInterface = "0.5.3, 0.6"
 Distributions = "0.25"
 FiniteDiff = "2"
 ForwardDiff = "0.10"
