Transition to DI v0.6

--- a/Project.toml
+++ b/Project.toml
@@ -16,24 +16,26 @@ OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
+SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
 
 [compat]
 ADTypes = "1"
 ChainRulesCore = "1"
-DifferentiationInterface = "0.5.3"
+DifferentiationInterface = "0.6.13"
 Distributions = "0.25"
 FiniteDiff = "2"
 ForwardDiff = "0.10"
 HCubature = "1"
 LinearAlgebra = "1"
-Optimization = "3.25"
-OptimizationOptimJL = "0.3"
+Optimization = "4.0.3"
+OptimizationOptimJL = "0.4.1"
 Reexport = "1"
 ReverseDiff = "1"
 SparseArrays = "1"
 SparseConnectivityTracer = "0.5, 0.6"
+SparseMatrixColorings = "0.4.7"
 Zygote = "0.6"
-julia = "1.9"
+julia = "1.10"
 
 [extras]
 ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
