--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         version:
           - '1.10'
-          - 'nightly'
+          - 'pre'
         os:
           - ubuntu-latest
         arch:
