--- a/Project.toml
+++ b/Project.toml
@@ -34,6 +34,7 @@ ReverseDiff = "1"
 SparseArrays = "1"
 SparseConnectivityTracer = "0.5, 0.6"
 SparseMatrixColorings = "0.4.7"
+StableRNGs = "1.0.2"
 Zygote = "0.6"
 julia = "1.10"
 
@@ -42,8 +43,9 @@ ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["ChainRulesTestUtils", "Distributions", "Random", "ReverseDiff", "Test", "Zygote"]
+test = ["ChainRulesTestUtils", "Distributions", "Random", "ReverseDiff", "StableRNGs", "Test", "Zygote"]
