--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.3.1"
 [deps]
 ADTypes = "47edcb42-4c32-4615-8424-f2b9edc5f35b"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
@@ -21,6 +22,7 @@ SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
 [compat]
 ADTypes = "1"
 ChainRulesCore = "1"
+ComponentArrays = "0.15.17"
 DifferentiationInterface = "0.6.13"
 Distributions = "0.25"
 FiniteDiff = "2"
