--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ FiniteDiff = "2"
 ForwardDiff = "0.10"
 HCubature = "1"
 LinearAlgebra = "1"
+Mooncake = "0.4.14"
 Optimization = "4.0.3"
 OptimizationOptimJL = "0.4.1"
 Reexport = "1"
@@ -43,6 +44,7 @@ julia = "1.10"
 [extras]
 ChainRulesTestUtils = "cdddcdb0-9152-4a09-a978-84456f9df70a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Mooncake = "da2b9cff-9c12-43a0-ae48-6db2b0edb7d6"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
@@ -50,4 +52,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["ChainRulesTestUtils", "Distributions", "Random", "ReverseDiff", "StableRNGs", "Test", "Zygote"]
+test = ["ChainRulesTestUtils", "Distributions", "Mooncake", "Random", "ReverseDiff", "StableRNGs", "Test", "Zygote"]
