cap DI at v0.6.17 for FwdDiff Tag issue

--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ SparseMatrixColorings = "0a514795-09f3-496d-8182-132a7b665d35"
 ADTypes = "1"
 ChainRulesCore = "1"
 ComponentArrays = "0.15.17"
-DifferentiationInterface = "0.6.13"
+DifferentiationInterface = "0.6.13 - 0.6.17"
 Distributions = "0.25"
 FiniteDiff = "2"
 ForwardDiff = "0.10"
