Implement LogDensityProblems interface

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -29,6 +30,7 @@ FiniteDiff = "2"
 ForwardDiff = "0.10"
 HCubature = "1"
 LinearAlgebra = "1"
+LogDensityProblems = "2.1.2"
 Optimization = "4.0.3"
 OptimizationOptimJL = "0.4.1"
 Reexport = "1"
