--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ OptimizationOptimJL = "0.4.1"
 Reexport = "1"
 ReverseDiff = "1"
 SparseArrays = "1"
-SparseConnectivityTracer = "0.5, 0.6"
+SparseConnectivityTracer = "0.5, 0.6, 1"
 SparseMatrixColorings = "0.4.7"
 StableRNGs = "1.0.2"
 Zygote = "0.6"
