--- a/.github/documentation.yml
+++ b/.github/documentation.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master # update to match your development branch (master, main, dev, trunk, ...)
+      - add-docs
     tags: '*'
   pull_request:
 
