--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -19,3 +19,6 @@ OptimizationPolyalgorithms = "500b13db-7e66-49ce-bda4-eed966be6282"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
+
+[compat]
+DynamicPPL = "0.37.4"
