CompatHelper: bump compat for Optimization to 5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ ForwardDiff = "0.10, 1"
 HCubature = "1"
 LinearAlgebra = "1"
 LogDensityProblems = "2.1.2"
-Optimization = "4.0.3"
+Optimization = "4.0.3, 5"
 OptimizationOptimJL = "0.4.1"
 Reexport = "1"
 ReverseDiff = "1"
